# API.yaml
@@ -3,6 +3,8 @@ info:
   description: "This API takes information abour Warehouses, trucks and packages for the creation of routes"
   title: Kurztrip Analyse
   version: '1.0'
+host: localhost:8000
+basePath: /
 tags:
   - name: "Trucks"
     description: "Add, modify and delete Trucks information"
@@ -602,7 +604,7 @@ definitions:
           $ref: "#/definitions/Coordinates"
       fuel_capacity:
         type: "number"
-        format: "float32"
+        format: "float"
       fuel_type:
         type : "string"
         enum:
@@ -611,16 +613,16 @@ definitions:
           - "Gas"
       fuel:
         type: "number"
-        format: "float32"
+        format: "float"
       fuel_by_kilometer:
         type: "number"
-        format: "float32"
+        format: "float"
       weight_capacity:
         type: "number"
-        format: "float32"
+        format: "float"
       volume_capacity:
         type: "number"
-        format: "float32"
+        format: "float"
       warehouse:
         type: "integer"
         format: "int32"
@@ -647,7 +649,7 @@ definitions:
         format: "int32"
       fuel_capacity:
         type: "number"
-        format: "float32"
+        format: "float"
       fuel_type:
         type : "string"
         enum:
@@ -656,13 +658,13 @@ definitions:
           - "Gas"
       fuel_by_kilometer:
         type: "number"
-        format: "float32"
+        format: "float"
       weight_capacity:
         type: "number"
-        format: "float32"
+        format: "float"
       volume_capacity:
         type: "number"
-        format: "float32"
+        format: "float"
       warehouse:
         type: "integer"
         format: "int32"
@@ -688,7 +690,7 @@ definitions:
         format: "int32"
       volume:
         type: "number"
-        format: "float32"
+        format: "float"
       destination:
         $ref: "#/definitions/Coordinates"
       receiver:
@@ -700,15 +702,15 @@ definitions:
         format: "int32"
   Coordinates:
     required:
-      - "latitude"
-      - "longitude"
+      - "coordinates"
     properties:
-      latitude:
-        type: "number"
-        format: "float32"
-      longitude:
-        type: "number"
-        format: "float32"
+      coordinates:
+        type: "array"
+        items:
+          type: "number"
+          format: "float"
+        minItems: 2
+        maxItems: 2
   Warehouse:
     required:
       - "id"
