# src/data/package_models.rs
@@ -12,6 +12,31 @@ pub struct Package{
     sender:String,
     warehouse:i32
 }
+
+impl Package {
+    pub fn id(&self) -> i32 {
+        self.id
+    }
+    pub fn volume(&self) -> f32 {
+        self.volume
+    }
+    pub fn weight(&self) -> f32 {
+        self.weight
+    }
+    pub fn destination(&self) -> &Coordinates {
+        &self.destination
+    }
+    pub fn receiver(&self) -> &str {
+        &self.receiver
+    }
+    pub fn sender(&self) -> &str {
+        &self.sender
+    }
+    pub fn warehouse(&self) -> i32 {
+        self.warehouse
+    }
+}
+
 #[derive(Serialize, Deserialize, Debug, Clone)]
 pub struct PackageRequest {
     id:i32,
